--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-dark">
   <div class="container-fluid">
     <div class="navbar-header">
       <h1>Library</h1>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li class="active"><a routerLink = "">Home</a></li>
+      <li><a routerLink = "books">Book Info</a></li>
     </ul>
   </div>
 </nav>
+<router-outlet></router-outlet>
