--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a routerLink = "">Home</a></li>
       <li><a routerLink = "books">Book Info</a></li>
+      <li><a routerLink = "add">Add a book</a></li>
     </ul>
   </div>
 </nav>
