Added CSS to the components.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
       <li class="active"><a routerLink = "">Home</a></li>
       <li><a routerLink = "books">Book Info</a></li>
       <li><a routerLink = "add">Add a book</a></li>
+      <li><a routerLink = "edit/:id">Update Book</a></li>
+      <li><a routerLink = "delete/:id">Delete Book</a></li>
     </ul>
   </div>
 </nav>
