--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<br/>
+<marquee *ngFor = "let b of rep">📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚📚</marquee>
+<br/>
+<br/>
+<h3>Welcome to book repository management!</h3>
+<h6>Through the website you as an admin will be able to manipulate the database containing the information of the books!</h6>
+<br/>
+<br/>
+<h4>Just Click Through The Links Above!</h4>
+
