--- a/src/app/books-list/books-list.component.html
+++ b/src/app/books-list/books-list.component.html
@@ -1,4 +1,4 @@
-<table class="table table-hover" *ngIf = "books.length > 0">
+<table class="table table-hover" *ngIf = "b.length > 0">
     <thead>
       <tr>
         <th>Title</th>
@@ -8,7 +8,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor = "let book of books">
+      <tr *ngFor = "let book of b">
         <td>{{book.Title}}</td>
         <td>{{book.ISBN}}</td>
         <td>{{book.Author}}</td>
@@ -16,4 +16,5 @@
       </tr>
     </tbody>
   </table>
-  <p *ngIf = "!(books.length > 0)" [ngStyle]="{'text-align': 'center', 'color': 'black'}">No books are currently available!</p>
+  <p *ngIf = "!(b.length > 0)" [ngStyle]="{'text-align': 'center', 'color': 'black'}">No books are currently available!</p>
+  <router-outlet></router-outlet>
