Style changes and removal of previous version of code.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <nav class="navbar navbar-inverse navbar-dark">
   <div class="container-fluid">
     <div class="navbar-header">
-      <h1>Library</h1>
+      <h1 style = "margin-left: 1rem;">Library</h1>
     </div>
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav" style = "margin-right: 1rem;">
       <li class="active"><a routerLink = "">Home</a></li>
+      <li class="active"><a routerLink = "login">Login</a></li>
       <li><a routerLink = "books">Book Info</a></li>
       <li><a routerLink = "add">Add a book</a></li>
       <li><a routerLink = "edit/:id">Update Book</a></li>
