--- a/src/app/delete/delete.component.html
+++ b/src/app/delete/delete.component.html
@@ -1,13 +1,12 @@
-<div class = "container my-5">
-    <h1 class = "mb-3">Delete book information</h1>
-    <form #form = "ngForm" (ngSubmit) = "deleteBook()">
-        
-        
-          <div class="mb-3">
-            <label for="id" class="form-label">ID:</label>
-            <input type="string" class="form-control" id="id" placeholder="Enter ID" name="year" [(ngModel)] = "id">
-          </div>
-        
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-</div>
+<div class="container my-5" style="margin-top: 50px;background-color: white;border-radius: 1rem;">
+    <h1 class="mb-3" style="margin-bottom: 20px; color: steelblue;">Delete book information</h1>
+    <form #form="ngForm" (ngSubmit)="deleteBook()" style="margin-top: 20px;">
+      <div class="mb-3">
+        <label for="id" class="form-label" style="color: black;">ID:</label>
+        <input type="string" class="form-control" id="id" placeholder="Enter ID" name="year" [(ngModel)]="id">
+      </div>
+  
+      <button type="submit" class="btn btn-primary" style="background-color: red;">Submit</button>
+    </form>
+  </div>
+  
